vlib/v/parser/tests/map_init.vv
fn main() {
	a := map[string]int{}
	b := map[string]f64{cap: 10}
}
